Lite skinn på skelette

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
     <head>
         <title>GREENLAND</title>
+        <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width">
         <meta name= "description" content=" En film av Ric Roman Waugh">
         <meta charset="UTF-8">
     </head>
@@ -25,7 +27,6 @@
               <section class = "primary-content">
                   <h4>Från producenten av the JOHN WICK franchise THE TOWN och
                     THE CLASH OF THE TITANS</h4>
-                  <img src="Greenland-IMG.jpg" alt=""/>
               </section>
               
               <section class="secondary-content">
@@ -35,17 +36,17 @@
                      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
                      gyroscope; picture-in-picture" allowfullscreen>
                     </iframe>
-                    <p> John Garrity, hans främmande fru och deras unga <br>son ger sig ut på en farlig resa för att hitta 
-                        fristad <br>när en komet som dödar en planet dödar mot jorden. 
-                        Mitt i skrämmande berättelser om städer<br>
-                        som utjämnas upplever Garritys mänsklighetens bästa och värsta.<br> När nedräkningen till den globala 
-                        apokalypsen närmar sig noll, <br>kulminerar deras otroliga vandring i en desperat och sista-minuten-flygning
+                    <p> John Garrity, hans främmande fru och deras unga son ger sig ut på en farlig resa för att hitta 
+                        fristad när en komet som dödar en planet dödar mot jorden. 
+                        Mitt i skrämmande berättelser om städer
+                        som utjämnas upplever Garritys mänsklighetens bästa och värsta. När nedräkningen till den globala 
+                        apokalypsen närmar sig noll, kulminerar deras otroliga vandring i en desperat och sista-minuten-flygning
                         till en möjlig säker tillflyktsort.
                     </p>
                      <ul>
                         <a href="#"><b><li>Director:</b></a> Ric Roman Waugh</li>
-                        <a href="#"><b><li>Music by:</b><a/> David Buckley</li>
-                        <a href="#"><b><li>Distributed by:</b><a/>STX Films</li>
+                        <a href="#"><b><li>Music by:</b></a> David Buckley</li>
+                        <a href="#"><b><li>Distributed by:</b></a>STX Films</li>
                         <a href="#"><b><li>Producers:</b></a>Gerard Butler, Basil Iwanyk, Sébastien Raybaud, Alan Siegel</li>
                      </ul>  
                 </div>
@@ -56,11 +57,12 @@
 
               <!-------------FOOTER---------->
         
-        <footer>
-        © 2021 Kenneth Okalang.For Film Staden Sweden.   
-        </footer>
+               <footer id="main-footer">
+                     <div id="footer"><p> © 2021 Kenneth Okalang. All Rights Reserved.
+                      For Film Staden Sweden.</p></div>
+                </footer>
 
-    </div> 
+         </div> 
 
               <!---------WRAPPER END---------->
 
